testdata/valid/internal/handler/http/user_handler.go
package http

import (
	_ "github.com/kimtaeyun/testproject/internal/app"
	_ "github.com/kimtaeyun/testproject/internal/handler/dto"
)

func Handle() {}
