testdata/invalid/internal/infra/postgres/user_repo.go
package postgres

import _ "github.com/kimtaeyun/testproject-invalid/internal/domain/user"

func Repo() {}
